<resources>
    <string name="app_name">AndiezStore</string>
    <string name="search">Search</string>
    <string name="cagetories">Cagetories</string>
    <string name="hi_andiez">Hi,Andiez</string>
    <string name="tony_kroos">Tony Kroos</string>
    <string name="cagetory_manage">Cagetory Manage</string>
    <string name="cagetory">Cagetory:</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="next">Next</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="loading">Loading</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="register">Register</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="registed">Registed</string>
    <string name="get_start_with_thien_an_education">Get start with Thien An Education</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_user_nav">UserNavActivity</string>
    <string name="hi">Hi,</string>
    <string name="hello">Hello,</string>
    <string name="admin">Admin</string>
    <string name="teacher">Teacher</string>
    <string name="apply">Apply</string>
    <string name="or">|</string>
    <string name="intro_to_ui_ux_design">Intro to UI/UX Design</string>
    <string name="_4_4">4.4</string>
    <string name="ui_ux_design">UI/UX Design</string>
    <string name="june_27th_2025">June 27th 2025</string>
    <string name="orr">/</string>
    <string name="_93_125">93/125</string>
    <string name="_93">93</string>
    <string name="_125">125</string>
    <string name="profile">Profile</string>
    <string name="title_activity_sflash">SflashActivity</string>
    <string name="student">Student</string>
    <string name="thienan">Thiên An Education</string>
    <string name="setting">Setting</string>
    <string name="setting_account">Setting Account</string>
    <string name="change_account_information">Change Account Information</string>
    <string name="change_account_password">Change Account Password</string>
    <string name="student_name">Student Name</string>
    <string name="enter_your_day_of_birth">Enter Your Day Of Birth</string>
    <string name="hometown">Hometown</string>
    <string name="email">Email</string>
    <string name="delete_information">Delete Information</string>
    <string name="update_information">Update Information</string>
    <string name="fragment_choice">fragment_choice</string>
    <string name="hello_admin">Hello Admin</string>
    <string name="manage_subject">Manage Subject</string>
    <string name="enter_subject_name">Enter Subject Name</string>
    <string name="enter_subject_decription">Enter Subject Decription</string>
    <string name="decription">Decription</string>
    <string name="enter_day_of_subject">Enter Day Of Subject</string>
    <string name="enter_subject_star">Enter Subject Star</string>
    <string name="subject_name">Subject Name</string>
    <string name="star_of_subject">Star Of Subject</string>
    <string name="day_of_subject_start">Day Of Subject Start</string>
    <string name="enter_your_account">Enter Your Account</string>
    <string name="subject_start_time">Subject Start Time</string>
    <string name="maximum_number_of_students">Maximum number of students</string>
    <string name="enter_number">Enter Number</string>
    <string name="send">Send</string>
    <string name="update_news">Update News</string>
    <string name="manage_news">Manage News</string>
    <string name="enter_news_tittle">Enter News Tittle</string>
    <string name="enter_news_decription">Enter News Decription</string>
    <string name="time">Time</string>
    <string name="news_title">News Title</string>
    <string name="enter_author">Enter Author</string>
    <string name="delete_news">Delete News</string>
    <string name="add_news">Add News</string>
    <string name="news">News</string>
    <string name="see_all">See All\n</string>
    <string name="edit_profile_photo">Edit Profile Photo</string>
    <string name="my_information">My Information</string>
    <string name="back">Back</string>
    <string name="exit_or_logout">Exit or Logout</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="email_address">Email Address</string>
    <string name="update_informations">Update Information</string>
    <string name="delete_account">Delete Account</string>
    <string name="intro_to_ui_ux_design_long">intro_to_ui_ux_design_long\n</string>
    <string name="messenger_title">Messenger\n</string>
    <string name="news_image">New Image</string>
    <string name="news_time">News Time</string>
    <string name="add_news_image">Add News Image</string>
    <string name="news_author">News\'s Author</string>
    <string name="hi_andiez_this_is_a_longer_message_to_test_how_the_bubble_adapts_to_more_content">Hi, Andiez! This is a longer message to test how the bubble adapts to more content.</string>
    <string name="main_action_button">Button</string>
    <string name="add_subject_button">add_Button</string>
    <string name="update_subject_button">update_button</string>
    <string name="delete_subject_button">delete_button</string>
    <string name="manage_news_header">Manage New</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>
    <string name="menu_messages">Messenger</string>
    <string name="menu_profile">Profile\n</string>
    <string name="menu_home">Home</string>
    <string name="menu_logout">Logout</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">user.email@android.com</string>
    <string name="more_news_">More News</string>
    <string name="news_">News</string>

</resources>