<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.fragment.AdminNewsFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/manage_news_header"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/_25ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewNews"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:paddingHorizontal="@dimen/_8sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        tools:listitem="@layout/item_news_admin" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:backgroundTint="@color/dark_blue"
        android:clickable="true"
        android:contentDescription="@string/main_action_button"
        android:focusable="true"
        android:src="@drawable/ic_setting"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_12sdp"
        android:backgroundTint="@color/my_green"
        android:clickable="true"
        android:contentDescription="@string/add_subject_button"
        android:focusable="true"
        android:src="@drawable/ic_add"
        android:visibility="invisible"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@id/btnMain"
        app:layout_constraintEnd_toEndOf="@id/btnMain"
        app:layout_constraintStart_toStartOf="@id/btnMain" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_12sdp"
        android:backgroundTint="@color/my_blue"
        android:clickable="true"
        android:contentDescription="@string/update_subject_button"
        android:focusable="true"
        android:src="@drawable/ic_update"
        android:visibility="invisible"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@id/btnAdd"
        app:layout_constraintEnd_toEndOf="@id/btnAdd"
        app:layout_constraintStart_toStartOf="@id/btnAdd" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_12sdp"
        android:backgroundTint="@color/my_red"
        android:clickable="true"
        android:contentDescription="@string/delete_subject_button"
        android:focusable="true"
        android:src="@drawable/ic_close"
        android:visibility="invisible"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@id/btnUpdate"
        app:layout_constraintEnd_toEndOf="@id/btnUpdate"
        app:layout_constraintStart_toStartOf="@id/btnUpdate" />

</androidx.constraintlayout.widget.ConstraintLayout>